--- a/src/Components/List/list.css
+++ b/src/Components/List/list.css
@@ -6,9 +6,24 @@ li{
     margin-bottom: 15px;
     border-radius: 10px;
     width: fit-content;
-    transition: all 3s ease-in;
+    transition: all 0.3s ease-in;
+    cursor: pointer;
 }
-.anima{
+
+.fade-enter {
+    opacity: 0;
+}
+
+.fade-enter-active {
     opacity: 1;
-    transform: translateY(0);
+    transition: opacity 0.3s ease-in;
+}
+
+.fade-exit {
+    opacity: 1;
+}
+
+.fade-exit-active {
+    opacity: 0;
+    transition: opacity 0.3s ease-out;
 }
